--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -1,3 +1,61 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Righteous&family=Work+Sans:wght@100;300;400;600;800&display=swap");
+* {
+  box-sizing: border-box;
+  font-family: "Work Sans", serif;
+  margin: 0;
+  padding: 0;
+}
 
+html {
+  /* me permet de faire glisser n’importe quel clic sur le lien du menu */
+  scroll-behavior: smooth;
+}
+
+/* Menu */
+.content-header {
+  background: #1e2326;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  z-index: 99;
+}
+.content-header header {
+  max-width: 1100px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
+}
+.content-header header .logo a {
+  font-family: "Righteous", serif;
+  font-size: 36px;
+  color: #1CB698;
+  text-decoration: none;
+}
+.content-header header ul {
+  display: flex;
+  list-style: none;
+}
+.content-header header nav ul li a {
+  color: #fff;
+  margin: 0 15px;
+  padding: 3px;
+  transition: 0.5s;
+  text-decoration: none;
+}
+.content-header header nav ul li a:hover {
+  color: #1CB698;
+}
+
+.nav-responsive {
+  background-color: #1CB698;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  display: none;
+}
 
 /*# sourceMappingURL=style.css.map */
