--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Righteous&family=Work+Sans:wght@100;300;400;600;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Cinzel+Decorative&family=Lovers+Quarrel&family=Nunito+Sans:wght@200&family=Work+Sans:wght@100;300;400;600;800&display=swap");
 * {
   box-sizing: border-box;
   font-family: "Work Sans", serif;
@@ -12,11 +12,12 @@ html {
   scroll-behavior: smooth;
 }
 
-/* Menu */
+/* Nav */
 .content-header {
   background: #1e2326;
   position: fixed;
   width: 100%;
+  top: 0;
   left: 0;
   z-index: 99;
 }
@@ -29,8 +30,8 @@ html {
   padding: 15px 20px;
 }
 .content-header header .logo a {
-  font-family: "Righteous", serif;
-  font-size: 36px;
+  font-family: "Lovers quarrel", serif;
+  font-size: 46px;
   color: #1CB698;
   text-decoration: none;
 }
@@ -56,6 +57,811 @@ html {
   border-radius: 5px;
   cursor: pointer;
   display: none;
+}
+
+/* Section Index */
+.index {
+  background: linear-gradient(to top, rgba(30, 35, 38, 0.8), rgb(30, 35, 38)), url(../img/background.jpg);
+  background-size: cover;
+  height: 100vh;
+  color: #fff;
+  display: flex;
+  align-items: center;
+}
+.index .content-banner {
+  padding: 20px;
+  background-color: #1e2326;
+  max-width: 350px;
+  margin: auto;
+  text-align: center;
+  border-radius: 40px;
+}
+.index .content-banner img {
+  margin-top: 40px;
+  border: 10px solid #1CB698;
+  display: block;
+  width: 80%;
+  margin: auto;
+  border-radius: 100%;
+}
+.index .content-banner h1 {
+  margin-top: 40px;
+  font-size: 30px;
+  font-family: "Cinzel Decorative";
+}
+.index .content-banner h2 {
+  font-size: 15px;
+  font-weight: normal;
+}
+.index .content-banner .social-media a {
+  color: #fff;
+  display: inline-block;
+  text-decoration: none;
+  border: 1px solid #fff;
+  border-radius: 100%;
+  width: 42px;
+  height: 42px;
+  line-height: 42px;
+  margin: 40px 5px;
+  font-size: 20px;
+  transition: 0.3s;
+}
+.index .content-banner .social-media a:hover {
+  background-color: #1CB698;
+}
+
+.aboutme {
+  background-color: #1e2326;
+  color: #fff;
+  padding: 50px 20px;
+}
+.aboutme .content-section {
+  max-width: 1300px;
+  margin: auto;
+}
+.aboutme .content-section p {
+  font-size: 18px;
+  line-height: 22px;
+  margin-bottom: 20px;
+}
+.aboutme .content-section p span {
+  color: #1CB698;
+  font-weight: bold;
+  font-size: 20px;
+}
+.aboutme .subheadline {
+  font-size: 25px;
+  font-family: "Nunito sans", sans-serif;
+  font-weight: 300;
+  text-align: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.aboutme h2 {
+  font-size: 48px;
+  font-family: "Abril Fatface", serif;
+  letter-spacing: 2px;
+  text-align: center;
+  padding: 20px 0;
+}
+.aboutme .fil {
+  display: flex;
+}
+.aboutme .fil .col {
+  width: 50%;
+  padding: 0 20px;
+}
+.aboutme .fil .col h3 {
+  font-size: 28px;
+  font-family: "Abril Fatface", serif;
+  letter-spacing: 2px;
+  margin-bottom: 25px;
+}
+.aboutme .fil .col ul {
+  list-style: none;
+}
+.aboutme .fil .col ul li {
+  margin: 5px 0;
+}
+.aboutme .fil .col ul li strong {
+  display: inline-block;
+  color: #1CB698;
+  width: 90px;
+}
+.aboutme .fil .col ul li span {
+  background-color: #1CB698;
+  padding: 2px;
+  border-radius: 5px;
+}
+.aboutme .fil .col .content-interest {
+  display: flex;
+  flex-wrap: wrap;
+}
+.aboutme .fil .col .content-interest .interest {
+  width: 100px;
+  height: 100px;
+  background-color: #252A2E;
+  border-radius: 10px;
+  margin: 0 15px 15px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+}
+.aboutme .fil .col .content-interest .interest:hover {
+  background-color: #1CB698;
+}
+.aboutme .fil .col .content-interest .interest i {
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+.aboutme button {
+  cursor: pointer;
+  background-color: transparent;
+  border: 2px solid #fff;
+  width: fit-content;
+  display: block;
+  margin: 20px auto;
+  padding: 10px 22px;
+  font-size: 16px;
+  color: #fff;
+  position: relative;
+  z-index: 10;
+}
+.aboutme button .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: #1CB698;
+  z-index: -1;
+  transition: 1s;
+}
+.aboutme button:hover .overlay {
+  width: 100%;
+}
+
+/* Section Skills */
+.skills {
+  background-color: #252A2E;
+  color: #fff;
+  padding: 50px 20px;
+}
+.skills .content-section {
+  max-width: 1300px;
+  margin: auto;
+}
+.skills .content-section h2 {
+  font-size: 48px;
+  font-family: "Abril Fatface", serif;
+  letter-spacing: 2px;
+  text-align: center;
+  padding: 20px 0;
+}
+.skills .fil {
+  display: flex;
+}
+.skills .fil .col {
+  width: 50%;
+  padding: 0 20px;
+}
+.skills .fil .col h3 {
+  font-size: 28px;
+  font-family: "Abril Fatface", serif;
+  letter-spacing: 2px;
+  margin-bottom: 25px;
+}
+.skills .skill > span {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 10px;
+}
+.skills .skill .bar-progress {
+  height: 4px;
+  width: 80%;
+  background-color: #1e2326;
+  position: relative;
+  margin-bottom: 30px;
+}
+.skills .skill .bar-progress span {
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  background-color: #1CB698;
+  border-radius: 50px;
+  line-height: 40px;
+  text-align: center;
+  top: -17px;
+  right: -15px;
+  font-size: 14px;
+}
+.skills .skill .progress {
+  background-color: #1CB698;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 8px;
+}
+.skills .skill .javascript {
+  width: 0;
+  animation: 2s javascript forwards;
+}
+.skills .skill .htmlcss {
+  width: 0;
+  animation: 2s htmlcss forwards;
+}
+.skills .skill .php {
+  width: 0;
+  animation: 2s php forwards;
+}
+.skills .skill .wordpress {
+  width: 0;
+  animation: 2s wordpress forwards;
+}
+.skills .skill .react {
+  width: 0;
+  animation: 2s react forwards;
+}
+.skills .skill .symfony {
+  width: 0;
+  animation: 2s symfony forwards;
+}
+.skills .skill .sql {
+  width: 0;
+  animation: 2s sql forwards;
+}
+.skills .skill .github {
+  width: 0;
+  animation: 2s github forwards;
+}
+.skills .skill .photoshop {
+  width: 0;
+  animation: 2s photoshop forwards;
+}
+.skills .skill .communication {
+  width: 0;
+  animation: 2s communication forwards;
+}
+.skills .skill .team {
+  width: 0;
+  animation: 2s team forwards;
+}
+.skills .skill .creativity {
+  width: 0;
+  animation: 2s creativity forwards;
+}
+.skills .skill .curiosity {
+  width: 0;
+  animation: 2s curiosity forwards;
+}
+.skills .skill .independence {
+  width: 0;
+  animation: 2s independence forwards;
+}
+.skills .skill .stiff {
+  width: 0;
+  animation: 2s stiff forwards;
+}
+.skills .skill .patient {
+  width: 0;
+  animation: 2s patient forwards;
+}
+.skills .skill .organised {
+  width: 0;
+  animation: 2s organised forwards;
+}
+.skills .skill .versatile {
+  width: 0;
+  animation: 2s versatile forwards;
+}
+
+@keyframes javascript {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 75%;
+  }
+}
+@keyframes htmlcss {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 90%;
+  }
+}
+@keyframes php {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 85%;
+  }
+}
+@keyframes wordpress {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 80%;
+  }
+}
+@keyframes react {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 65%;
+  }
+}
+@keyframes symfony {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 90%;
+  }
+}
+@keyframes sql {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 90%;
+  }
+}
+@keyframes github {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 90%;
+  }
+}
+@keyframes photoshop {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 85%;
+  }
+}
+@keyframes communication {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 80%;
+  }
+}
+@keyframes team {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 70%;
+  }
+}
+@keyframes creativity {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 85%;
+  }
+}
+@keyframes curiosity {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 90%;
+  }
+}
+@keyframes independence {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 85%;
+  }
+}
+@keyframes stiff {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 80%;
+  }
+}
+@keyframes patient {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 90%;
+  }
+}
+@keyframes organised {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 80%;
+  }
+}
+@keyframes versatile {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 85%;
+  }
+}
+/* Section CV */
+.cv {
+  background-color: #1e2326;
+  color: #fff;
+  padding: 50px 20px;
+}
+.cv .content-section {
+  max-width: 1300px;
+  margin: auto;
+}
+.cv .content-section h2 {
+  font-size: 48px;
+  font-family: "Abril Fatface", serif;
+  letter-spacing: 2px;
+  text-align: center;
+  padding: 20px 0;
+}
+.cv .fil {
+  display: flex;
+  justify-content: space-between;
+}
+.cv .fil .col {
+  width: 49%;
+  padding: 0 20px;
+}
+.cv .fil .col h3 {
+  font-size: 28px;
+  font-family: "Abril Fatface", serif;
+  letter-spacing: 2px;
+  margin-bottom: 25px;
+}
+.cv .fil .left {
+  border-right: 2px solid #252A2E;
+}
+.cv .fil .right {
+  border-left: 2px solid #252A2E;
+}
+.cv .fil .item {
+  padding: 25px;
+  margin-bottom: 30px;
+  background-color: #252A2E;
+  position: relative;
+}
+.cv .fil .item h4 {
+  font-size: 24px;
+  margin-bottom: 8px;
+}
+.cv .fil .item .home {
+  font-family: "Nunito sans", serif;
+  color: #1CB698;
+  font-size: 22px;
+  font-weight: bold;
+  display: block;
+}
+.cv .fil .item .date {
+  display: block;
+  color: #1CB698;
+  margin-bottom: 10px;
+  font-size: 17px;
+}
+.cv .fil .item p {
+  font-family: "Abril Fatface", serif;
+  letter-spacing: 2px;
+  font-size: 18px;
+}
+.cv .fil .item .connectl {
+  height: 2px;
+  background-color: #1CB698;
+  width: 47px;
+  position: absolute;
+  top: 50%;
+  right: -47px;
+  z-index: 5;
+}
+.cv .fil .item .connectl .circlel {
+  display: block;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color: #1CB698;
+  float: right;
+  position: relative;
+  bottom: 4px;
+}
+.cv .fil .item .connectr {
+  height: 2px;
+  background-color: #1CB698;
+  width: 47px;
+  position: absolute;
+  top: 50%;
+  left: -47px;
+  z-index: 5;
+}
+.cv .fil .item .connectr .circler {
+  display: block;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color: #1CB698;
+  float: left;
+  position: relative;
+  bottom: 4px;
+}
+.cv .fil .lef {
+  border-right: 2px solid #1CB698;
+  margin-right: 20px;
+}
+.cv .fil .rig {
+  border-left: 2px solid #1CB698;
+  margin-left: 20px;
+}
+
+/* Section Portfolio */
+.portfolio {
+  background-color: #252A2E;
+  color: #fff;
+  padding: 50px 20px;
+}
+.portfolio .content-section {
+  max-width: 1300px;
+  margin: auto;
+}
+.portfolio .content-section h2 {
+  font-size: 48px;
+  font-family: "Abril Fatface", serif;
+  letter-spacing: 2px;
+  text-align: center;
+  padding: 20px 0;
+}
+.portfolio .gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.portfolio .gallery .project {
+  position: relative;
+  max-width: 340px;
+  height: fit-content;
+  margin: 10px;
+  cursor: pointer;
+}
+.portfolio .gallery .project img {
+  width: 100%;
+  display: block;
+}
+.portfolio .gallery .project .overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background: linear-gradient(rgba(28, 182, 152, 0.8), rgba(28, 182, 152, 0.8));
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: 1s;
+  font-size: 18px;
+  letter-spacing: 3px;
+  opacity: 0;
+}
+.portfolio .gallery .project .overlay h3 {
+  margin-bottom: 20px;
+  transition: 1s;
+}
+.portfolio .gallery .project .overlay:hover {
+  opacity: 1;
+}
+.portfolio .gallery .project .overlay:hover h3 {
+  margin-bottom: 0;
+}
+
+/* Section Contact */
+.contact {
+  background-image: url("../img/contact_bg.png");
+  background-color: #1e2326;
+  color: #fff;
+  padding: 50px 0;
+}
+.contact .content-section {
+  max-width: 1300px;
+  margin: auto;
+}
+.contact h2 {
+  font-size: 48px;
+  font-family: "Abril Fatface", serif;
+  letter-spacing: 2px;
+  text-align: center;
+  padding: 20px 0;
+}
+.contact .fil {
+  display: flex;
+}
+.contact .col {
+  width: 50%;
+  padding: 10px;
+  position: relative;
+}
+.contact .col input, .contact .col textarea {
+  display: block;
+  width: 100%;
+  padding: 18px;
+  border: none;
+  margin-bottom: 20px;
+  background-color: #252A2E;
+  color: #fff;
+  font-size: 18px;
+}
+.contact .col img {
+  width: 100%;
+}
+.contact .col .info {
+  position: absolute;
+  top: 40%;
+  background-color: #252A2E;
+  padding: 20px;
+  max-width: 350px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.contact .col .info ul {
+  list-style: none;
+}
+.contact .col .info ul li {
+  margin-bottom: 20px;
+}
+.contact .col .info ul li i {
+  color: #1CB698;
+  display: inline-block;
+  margin-right: 15px;
+}
+.contact button {
+  cursor: pointer;
+  background-color: transparent;
+  border: 2px solid #fff;
+  width: fit-content;
+  display: block;
+  margin: 20px auto;
+  padding: 10px 22px;
+  font-size: 16px;
+  color: #fff;
+  position: relative;
+  z-index: 10;
+}
+.contact button .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: #1CB698;
+  z-index: -1;
+  transition: 1s;
+}
+.contact button:hover .overlay {
+  width: 100%;
+}
+
+footer {
+  background-color: #252A2E;
+  color: #fff;
+  padding: 50px 0 30px 0;
+  text-align: center;
+  position: relative;
+  width: 100%;
+}
+footer .social-media {
+  margin-bottom: 20px;
+}
+footer .social-media a {
+  color: #fff;
+  display: inline-block;
+  text-decoration: none;
+  border: 1px solid #fff;
+  border-radius: 100%;
+  width: 42px;
+  height: 42px;
+  line-height: 42px;
+  margin: 40px 5px;
+  font-size: 20px;
+  transition: 0.3s;
+}
+footer .up {
+  display: block;
+  width: 50px;
+  height: 50px;
+  background-color: #1CB698;
+  color: #fff;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -25px;
+  border-radius: 50%;
+  line-height: 50px;
+  font-size: 18px;
+}
+
+/* Section Responsive */
+@media screen and (max-width: 980px) {
+  nav {
+    display: none;
+  }
+  nav.responsive {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 70px;
+    background-color: #252A2E;
+    width: 180px;
+  }
+  nav.responsive ul {
+    display: block !important;
+  }
+  nav.responsive ul li {
+    border-bottom: 1px solid #fff;
+    padding: 10px 0;
+  }
+  .nav-responsive {
+    display: block;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .aboutme .fil {
+    display: block;
+  }
+  .aboutme .fil .col {
+    width: fit-content;
+  }
+  .skills .fil {
+    display: block;
+  }
+  .skills .fil .col {
+    width: 100%;
+  }
+  .skills .fil .col .bar-progress {
+    width: 100%;
+  }
+  .cv .fil {
+    display: block;
+  }
+  .cv .fil .col {
+    width: 90%;
+  }
+  .cv .fil .right {
+    margin-left: 20px;
+  }
+  .portfolio .gallery {
+    display: block;
+    width: 100%;
+  }
+  .portfolio .gallery .project {
+    max-width: 100%;
+  }
+  .portfolio .gallery .project img {
+    width: 100%;
+  }
+  .contact .fil {
+    display: block;
+  }
+  .contact .fil .col {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
