--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -204,9 +204,12 @@ html{
     margin: 20px auto;
     padding: 10px 22px;
     font-size: 16px;
-    color: #fff;
     position: relative;
     z-index: 10;
+    & a{
+      text-decoration: none;
+      color: #fff;
+    }
     & .overlay{
       position: absolute;
       top: 0;
