--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -210,7 +210,7 @@ html {
 }
 .aboutme button a {
   text-decoration: none;
-  color: #fff;
+  color: #ffffff;
 }
 .aboutme button .overlay {
   position: absolute;
