--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -208,7 +208,7 @@ html{
     z-index: 10;
     & a{
       text-decoration: none;
-      color: #ffffff;
+      color: #fff;
     }
     & .overlay{
       position: absolute;
