--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -87,7 +87,7 @@ html {
 .index .content-banner h1 {
   margin-top: 40px;
   font-size: 30px;
-  font-family: "Cinzel Decorative";
+  font-family: "Cinzel Decorative", serif;
 }
 .index .content-banner h2 {
   font-size: 15px;
@@ -204,6 +204,7 @@ html {
   display: block;
   margin: 20px auto;
   padding: 10px 22px;
+  color: #fff;
   font-size: 16px;
   position: relative;
   z-index: 10;
