--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -86,7 +86,7 @@ html{
     & h1{
       margin-top: 40px;
       font-size: 30px;
-      font-family: 'Cinzel Decorative';
+      font-family: 'Cinzel Decorative', serif;
     }
     & h2{
       font-size: 15px;
@@ -203,6 +203,7 @@ html{
     display: block;
     margin: 20px auto;
     padding: 10px 22px;
+    color: #fff;
     font-size: 16px;
     position: relative;
     z-index: 10;
