--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -577,6 +577,10 @@ html{
         width: 100%;
         display: block;
       }
+      & a{
+        text-decoration: none;
+        color: #fff;
+      }
       & .overlay{
         position: absolute;
         top: 0;
